# huawei-arengine-native

./: settings.gradle
UnityAREngine/: .gitignore  build.gradle
UnityAREngine/src/main/cpp/: CMakeLists.txt  InputLifecycleProivider.cpp  InputProvider.cpp  unityarengine.cpp
UnityAREngine/src/main/cpp/huawei_arengine/include/: huawei_arengine_interface.h
UnityAREngine/src/main/cpp/include/: AndroidLog.h  InputLifecycleProivider.h  InputProvider.h
UnityAREngine/src/main/java/com/sunflower/unityarengine/: NativeLib.java
gradle/wrapper/: gradle-wrapper.properties
